feat: add CHANGELOG and enhance release automation - Add CHANGELOG.md following Keep a Changelog format - Document v1.0.0 release with all features and improvements - Update .goreleaser.yml with conventional commit grouping - Configure changelog to group by: Features, Bug Fixes, Perf, Docs - Add transparent logo (replaces white background) - Fix golangci-lint v2 compatibility Changes to .goreleaser.yml: - Add 'use: github' for better GitHub integration - Group commits by type (feat, fix, perf, docs) - Filter out test, chore, and ci commits - Improve release notes readability This ensures professional, organized release notes for all future releases via GoReleaser automation.

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -40,20 +40,37 @@ archives:
       - LICENSE*
 
 checksum:
-  name_template: 'checksums.txt'
+  name_template: "checksums.txt"
 
 snapshot:
   version_template: "{{ incpatch .Version }}-next"
 
 changelog:
+  use: github
   sort: asc
+  groups:
+    - title: Features
+      regexp: '^.*?feat(\([[:word:]]+\))??!?:.+$'
+      order: 0
+    - title: Bug Fixes
+      regexp: '^.*?fix(\([[:word:]]+\))??!?:.+$'
+      order: 1
+    - title: Performance Improvements
+      regexp: '^.*?perf(\([[:word:]]+\))??!?:.+$'
+      order: 2
+    - title: Documentation
+      regexp: '^.*?docs(\([[:word:]]+\))??!?:.+$'
+      order: 3
+    - title: Other Changes
+      order: 999
   filters:
     exclude:
-      - '^docs:'
-      - '^test:'
-      - '^chore:'
-      - Merge pull request
-      - Merge branch
+      - "^test:"
+      - "^chore:"
+      - "^ci:"
+      - "Merge pull request"
+      - "Merge branch"
+      - "go mod tidy"
 
 release:
   github:
@@ -68,7 +85,7 @@ brews:
       owner: marshallshelly
       name: homebrew-tap
     homepage: https://github.com/marshallshelly/pebble-orm
-    description: Type-safe PostgreSQL ORM for Go
+    description: Type-safe PostgreSQL ORM for Go. Compile-time safety, runtime speed.
     license: MIT
     install: |
       bin.install "pebble"
