--- a/.golangci.yml
+++ b/.golangci.yml
@@ -3,20 +3,17 @@ version: 2
 linters:
   enable:
     - errcheck
-    - gofmt
-    - goimports
     - govet
     - staticcheck
     - unused
   disable:
-    - goconst # Too strict for examples
-    - gocyclo # Complex functions are sometimes necessary
-    - gosec # File permissions warnings not critical
+    - goconst
+    - gocyclo
+    - gosec
 
 linters-settings:
   errcheck:
     check-blank: false
-    check-type-assertions: false
     exclude-functions:
       - (*database/sql.Rows).Close
       - (*database/sql.Tx).Rollback
