--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,28 +1,7 @@
-version: 2
+version: "2"
 
 linters:
   enable:
     - errcheck
     - govet
     - staticcheck
-    - unused
-  disable:
-    - goconst
-    - gocyclo
-    - gosec
-
-linters-settings:
-  errcheck:
-    check-blank: false
-    exclude-functions:
-      - (*database/sql.Rows).Close
-      - (*database/sql.Tx).Rollback
-
-issues:
-  exclude-dirs:
-    - examples
-  exclude-rules:
-    - path: _test\.go
-      linters:
-        - errcheck
-        - gosec
